src/css/main.css
/* ... */
#scroll-to-top > .custom-i{
	margin-bottom: -5px !important;
}
#scroll-to-top:hover {
	/* transform: scale(1.2); */
	margin-bottom: 20px;
}   
.contact-form{
	display: grid;
}
.contact-form label{
	margin-bottom: 0.2em;
}
.contact-form .form-input{
	margin-bottom: 1em;
	border: none;
    border-radius: 2px;
	outline: none;
	padding: 0.4em;
	background-color: white !important;
	color: dimgray;
}
.contact-form .btn-send{
	color: var(--card-dark-light-color);
	background-color: var(--card-light-light-color);
	border: none;
    width: fit-content;
    outline: 20px;
    border-radius: 2px;
	transition: all 0.3s ease-in-out;
}
.btn-send:hover{
	box-shadow: inset 0px 0px 10px var(--card-dark-dark-color);
	color: white;
}
/* 
__________

GENERAL END
__________

*/

/* 
__________

ROADMAP START
__________

*/
.roadmap{
	/* padding: 1rem 1rem 2rem; */
	padding: 1rem 1rem 1rem 1rem;
	background-color: white;
	display: grid;
	/* The columns will be used for wider displays */
	/* grid-template-columns: repeat(5, 1fr); */
	grid-template-rows: 1fr min-content;
	text-align: center;
	transition: margin 0.5s ease;
	margin-top: -440px;
    max-height: 500px;
	/* margin-top: -250px; 
	__ORIGNAL VALUES__
	max-height: 310px;*/
	/*overflow-y: scroll; */
}
.road-map-locator{
	display: grid;
	grid-auto-rows: 1fr;
	overflow-y: auto;
}
.destination{
	display: grid;
	color: var(--card-light-light-color);
	grid-template-rows: min-content;
	padding: 0.5rem;
	background-color: var(--card-dark-dark-color);
	border-radius: 5px;
	text-transform: uppercase;
	transform: all 0.2s ease-in;
}
.destination:hover{
	transition: scale(1.2);
}
.destination > span:last-child{
	font-size: .7em;
}
.connection:first-of-type{
	border-top-color: var(--card-dark-dark-color);
}
.connection:first-of-type:after{
	border-top-color: var(--card-dark-dark-color);
}
.connection{
	display: block;
	border: 0;
	background-color: white;
	margin: 2em 1em;
	padding: 0;
	margin-bottom: 0;
	/* The commented code is used for wider screens */
	/* height: 1px;
	border-top: 1px solid #ccc; */
}
.connection::after{
	content: '';
	width: 0; 
	height: 0; 
	justify-self: center;
	border: 7px solid transparent;
    border-top: 8px solid gray;
    border-bottom: 0 none;
	margin-top: -10px;

	/* The commented code is used for wider screens */
/* 	border-top: 10px solid transparent;
	border-bottom: 10px solid transparent;
	border-left: 5px solid #ccc */;
	/* float:right; */
}
.current{
	background-color: var(--third-color);
	color: white !important;
	text-shadow: 2px 1px 3px black;
	box-shadow: 0px 0px 5px 1px var(--fourth-color);
}
#show-locator{
	margin-top: 1rem;
    color: var(--fourth-color);
    font-weight: bold;
}
.show-locator-toggle{
	margin-top: 0 !important;
}
/* 
__________

ROADMAP END
__________

*/

/* 
__________

MOBILE MENU BUTTON START
__________

*/
.nav-toggle{
	cursor: pointer;
}
.main-header > .nav-toggle{
	position: relative;
/*     top: 71px;
	right: 5%; */
	left: 100vw;
    margin-left: -50px;
	transition: left .5s ease-in-out;
}
.main-header > .nav-toggle div{
    width: 35px;
    height: 5px;
    background-color: var(--second-color);
	margin: 6px 0;
	box-shadow: 0 0 5px 0px var(--second-color);
}
.btn.nav-toggle{
	padding: 0;
}
/* 
__________

MOBILE MENU BUTTON END
__________

*/

/*
__________

MAIN NAVIGATION START
__________

*/
.main-nav{
	position: fixed;
	background-color: var(--card-dark-light-color);
	top: 0;
	left: 0;
	height: 100vh;
	width: 100%;
	overflow: hidden;
	font-size: 1.5em;
	display: grid;
	grid-auto-rows: 1fr;
	justify-items: center;
	align-items: center;
	z-index: 6;
	transform: translate(-100%);
	transition: transform 0.2s ease;
	text-transform: uppercase;
}
.main-nav > div:nth-child(2){
	grid-row-start: 1;
    grid-row-end: 3;
}
.main-nav.open{
	transform: translate(0);
}
.main-nav .nav-toggle{
    position: absolute;
    top: 70px;
    right: -50px;
	text-align: left;
	width: 65px;
}
.nav-close-icon{
	background-color: var(--third-color);
	padding: .85em 1.1em;
	text-align: left;
    border-top-left-radius: 30%;
    border-bottom-left-radius: 30%;
}
.custom-i{
	border: solid white;
    border-width: 0 4px 4px 0;
    display: inline-block;
	padding: 3px;
    width: 16px;
    height: 17px;
}
.arrow-right{
	transform: rotate(135deg);
}
.arrow-up{
	transform: rotate(-135deg);
}
.main-nav > div {
	margin: 0.5em 1em;
}
.main-nav > div > a{
	background: none;
	border: none;
	outline: none;
	max-height: 40px;
	color: var(--second-color);
}
.main-nav > .logo-container-outer .nav-mobile-logo {
	position: absolute;
	margin-left: auto;
	margin-right: auto;
	top: 0px;
	left: 0;
	right: 0;
	display: block;
	z-index: -1;
}
.nav-contact-info{
	display: none;
}
/*
__________

MAIN NAVIGATION END
__________

*/

/*
__________

MAIN CONTENT START
__________

*/
.section {
	position: relative;
	height: 100vh;
	display: flex;
	align-items: center;
	color: white;
}
.parallax::after {
	content: " ";
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	transform: translateZ(-1px) scale(1.5);
	background-size: 100%;
	z-index: -1;
}
.static {
	font-size: 2.5vh;
	min-height: 50%;
	height: auto;
	display: grid;
	grid-auto-rows: min-content;
	/* grid-template-rows: repeat(2, 1fr); */
	text-align: justify;
	padding: 0em 1.3em;		
	font-family: 'Montserrat','Roboto' ;
	font-weight: bold;
}
.static p{
	padding: 0;
	margin: 0 0 1rem 0;
}
.bg1 > div{
	display: flex;
	flex-direction: column;
	margin-top: -60vh;
	color: var(--fourth-color);
	font-family: 'antro-bold', 'Montserrat','Roboto' ;
	text-align: center;
	font-size:  1.3em;
}
.bg1 > div > * {
	margin: 0;
}
.bg1 > div > p {
	font-family: 'Montserrat','Roboto' ;
	margin: 2rem 1rem;
}
.bg1::after {
    left: -1%;
    background: url('/dist/assets/img/bq.jpg') no-repeat center;
	background-size: cover;
	background-position-y: 60%;
}
.bg2::after {
  	left: -1%;
    background: url('/dist/assets/img/bq4.jpg') no-repeat center;
    background: cover;
}
/* ... */

